2007-12-16  Xan Lopez  <xan@gnome.org>

Reviewed by Alexey Proskuryakov.

        http://bugs.webkit.org/show_bug.cgi?id=16454
        [GTK] Text input doesn't work consistently on PPC

        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::singleCharacterString):

        UChar is 2 bytes (UTF-16), so transform accordingly from
        gunichar (UCS-4). Fixes keyboard input on big endian systems.


Canonical link: https://commits.webkit.org/22634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28769 268f45cc-cd09-0410-ab3c-d52691b4dbfc